Recepten website gemaakt

--- a/index.html
+++ b/index.html
@@ -1,1 +1,56 @@
-<!-- nothing here -->
+<!DOCTYPE html>
+
+<html lang="en">
+
+
+<head>
+
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE-edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Recepten Deserten</title>
+
+</head>
+
+<body>
+    <h1>chocomousse</h1>
+
+    <ul>
+        <li><a href="index.html">chocomousse</a></li>
+        <li><a href="brownies.html">brownies</a></li>
+        <li><a href="pudding.html">pudding</a></li>
+    </ul>
+
+    <img src="images/chocomousse.jpg">
+
+    <h2>ingridienten</h2>
+
+    <ul>
+        <li>30 gr boter</li>
+        <li>20 gr suiker</li>
+        <li>50 ml room</li>
+        <li>100 gr chocolade</li>
+        <li>2 eigelen</li>
+        <li>4 eiwitten</li>
+    </ul>
+
+    <h2>bereiding</h2>
+
+    <ol>
+
+        <li>Smelt de boter en de chocolade op een laag vuurtje of gebruik de microgolfoven gedurende 1 minuut. Verwarm
+            eventueel nog iets langer.
+
+            Giet de room erbij.</li>
+
+        <li> de eiwitten op samen met de suiker. Doe de eigelen bij het chocolademengsel en roer eronder.</li>
+
+        <li>Voeg het opgeklopte eiwit bij het chocolademengsel en roer eronder. Belangrijk: zorg dat het allebei op
+            kamertemperatuur is. Als de chocolade te warm is, wordt het eiwit terug vloeibaar. Is het te koud, dan gaat
+            het mengsel klonteren.</li>
+
+        <li> Verdeel in potjes en laat gedurende 2 uur opstijven in de koelkast.</li>
+    </ol>
+</body>
+
+</html>
